[package]
name = "gain"
version = "0.1.0"
edition = "2021"
authors = ["Stoejmaskiner <panierilorenzo@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://stoejmaskiner.com"
description = "A simple gain plugin (for testing purposes)"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "*"
atomic_refcell = "*"
vizia = { git = "https://github.com/vizia/vizia.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
